add deployment action

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
               </div>
               <figcaption class="sr-only">Demo: File uploader</figcaption>
             </figure>
-            <h3>File uploader</h3>
+            <a href="https://cheersmas.github.io/react-upload-box" target="_blank">
+              <h3>File uploader</h3>
+            </a>
             <p>Minimally designed fileuploader for ReactJS applications</p>
           </article>
           <article class="project-card">
@@ -112,9 +114,11 @@
               </div>
               <figcaption class="sr-only">Testimonials video</figcaption>
             </figure>
-            <h3>
-              Banners
-            </h3>
+            <a href="https://cheersmas.github.io/banners" target="_blank">
+              <h3>
+                Banners
+              </h3>
+            </a>
             <p>A stripe inspired banner from 2018.
               <a href="https://web.archive.org/web/20190417174328/https://stripe.com/en-US/payments">Reference</a>
             </p>
